# build

./: .release-please-manifest.json  Earthfile  README.md  digests.Dockerfile  release-please-config.json  renovate.json
.github/workflows/: bumpversion.yaml  ci--commitizen.yaml  ci--images.yaml  ci--text-tools.yaml  ci.yaml  release--text-tools.yaml  release-please.yaml  versioning--text-tools.yaml  versioning.yaml
build_metadata/: .envrc  .gitignore  Cargo.toml  conda-lock.yml  environment.yml
build_metadata/src/: repo.rs
commitizen/: Earthfile
helm/: .cz.toml  Earthfile  component.toml
images/: .cz.toml  CHANGELOG.md  Earthfile  component.toml  cz.yaml  digests.Dockerfile  requirements.txt
info/: Earthfile
manifests/: .cz.toml  Earthfile  component.toml  manifest.json.j2
release/: Earthfile  digests.Dockerfile
text-tools/: .cz.toml  CHANGELOG.md  Earthfile  component.toml
