[package]
name = "build_metadata"
version = "0.1.0"
edition = "2021"


[dependencies]
clap = { version = "4.5.2", features = ["derive", "unicode"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0"
git2 = "0.18.2"

[dev-dependencies]
tempfile = "3.1.0"
cargo-tarpaulin = "0.27.3"
